# atcoder

./: README.md
python/: README.md  pyproject.toml
python/atcoder_beginner_contest/abc429/: a_too_many_request.py  b_n_1.py
python/beginners_selection/: abc049c_day_dream.py  abc081a_placing_marbles.py  abc081b_shift_only.py  abc083b_some_sums.py  abc085b_kagami_mochi.py  abc085c_otoshidama.py  abc086a_product.py  abc086c_traveling.py  abc087b_coins.py  abc088b_card_game_for_two.py  welcome_to_atcoder.py
python/practice_contest/: welcome_to_atcoder.py
python/typical_90/: 001_yokan_party.py
