[tool.poetry]
name = "atcoder-python"
version = "0.1.0"
description = ""
authors = ["yss <waku.pdxppxzy@gmail.com>"]
readme = "README.md"
packages = [{include = "atcoder_python"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
